@@ -65,12 +65,12 @@
             </div>
 
             <!--Hero Info-->
-            <section class="p-y-200--md p-y-80">
+            <section class="p-y-80">
                 <div class="container text-center">
                     <div class="row">
                         <div class="half offset-quarter">
                             <div class="m-b-lg">
-                                <h2 class="display m-b">
+                                <h2 class="text-5rem m-b">
                                     Work for
                                     <span class="color-primary">California!</span>
                                 </h2>
@@ -495,28 +495,6 @@
                 </div>
             </div>
 
-            <div class="section bg-primary-standout-gradient">
-                <div class="container p-y-md">
-
-
-                    <div class="carousel owl-carousel carousel-content">
-                        <div class="item">
-                            <a href=""><img src="/sample/images/ad-ui-online.jpg" alt="UI Online"></a>
-                        </div>
-                        <div class="item">
-                            <a href=""><img src="/sample/images/ad-apps.jpg" alt="Apps"></a>
-                        </div>
-                        <div class="item">
-                            <a href=""><img src="/sample/images/ad-survey.jpg" alt="Survey"></a>
-                        </div>
-                    </div>
-
-
-
-
-                </div>
-            </div>
-            <!-- End Section -->
 
             <div class="section-understated">
                 <div class="container">
