@@ -39,3 +39,4 @@ v5.6.2
 - Fixed Course List page layout issue (updated courses.scss)
 - Removed broken link on Layouts landing page
 - Fixed broken link to Events page that was in Layouts landing page
+- Removed old carousel section from General Landing page
